assets/css/style.css
/* ... */
/** Masthead
 -------------------------------------------------- */
.logo {
  background-image: url("../img/logo.png?ver=1.1");
  display: block;
  height: 55px;
  margin-bottom: 45px;
  text-indent: -9999em; }

/* 	Main Navigation
	------------------------------------------------------- */
.main-nav {
  background: #222222;
  bottom: 0;
  position: fixed;
  top: 0;
  width: 138px;
  z-index: 100; }
  .main-nav ul {
    position: relative;
    /* 	Project Link */ }
    .main-nav ul li {
      position: relative; }
      .main-nav ul li a {
        display: block;
        padding: 21px 0 21px 20px; }
        .main-nav ul li a:hover {
          background-color: #333333;
          text-decoration: none; }
      .main-nav ul li ul {
        -moz-box-shadow: 1px 1px #adadad;
        /* FF3.5+ */
        -webkit-box-shadow: 1px 1px #adadad;
        /* Saf3+, Chrome */
        box-shadow: 1px 1px #adadad;
        /* Standard. Opera 10.5, IE9+ */
        left: -9999em;
        z-index: 100;
        position: absolute;
        top: 0;
        width: 215px; }
        .main-nav ul li ul li {
          border-bottom: 1px solid #333333; }
          .main-nav ul li ul li a {
            background-color: #111111;
            padding: 19px 0 19px 20px; }
            .main-nav ul li ul li a:hover {
              background-color: #333333; }
          .main-nav ul li ul li.list-last a {
            background-image: url("../img/arrow-right-white.png?ver=1.1");
            background-repeat: no-repeat;
            background-position: 85% 50%; }
      .main-nav ul li:hover ul {
        left: 138px; }

/* 	Pagination Links
------------------------------------------------------- */
.meta-nav {
  display: none; }

.nav-previous a {
  background: transparent url("../img/arrow-right.png?ver=1.1") no-repeat 100% 25%;
  padding-right: 20px; }

.nav-next a {
  background: transparent url("../img/arrow-left.png?ver=1.1") no-repeat 0% 25%;
  padding-left: 20px; }

/* 	Page Headers
------------------------------------------------------- */
.page-title {
  color: #222222;
  font-family: 'SourceSansProRegular';
  font-weight: normal;
  margin: 0;
  padding: 26px 0 0 0;
  text-shadow: 1px 1px white; }
  .page-title em {
    font-family: 'SourceSansProSemiBold';
    font-style: normal;
    font-weight: bold; }

.pagination {
  display: block; }
  .pagination .nav-previous {
    float: right;
    margin-right: 128px;
    margin-top: 23px; }
  .pagination .nav-next {
    float: left;
    margin-left: 52px;
    margin-top: 23px; }
  .pagination a {
    color: #222222;
    font-family: "SourceSansProRegular", Helvetica;
    font-size: 20px;
    text-shadow: 1px 1px white; }
    .pagination a:visited {
      color: #222222; }
    .pagination a:hover {
      color: black; }

footer {
  background: none;
  clear: both;
  height: 30px;
  margin-top: -50px;
  position: relative; }

.footer-logo {
  width: 180px;
  height: 28px;
  background: url(../svg/cf-logo.svg) no-repeat;
  float: right;
  margin-right: 24px; }

body {
  background-image: url("../img/tile.png?ver=1.1");
  background-size: 8px;
  color: #333333;
  font-family: sans-serif;
  font-size: 13px; }

.container {
  min-height: 100%; }

/* 	Content - Posts, Pages, Comments
	------------------------------------------------------- */
h1 {
  font-family: "SourceSansProSemibold", Helvetica;
  font-size: 32px;
  text-shadow: 1px 1px white; }

nav a {
  font-family: "SourceSansProRegular", Helvetica;
  font-size: 1rem;
  text-shadow: 1px 1px #111111;
  text-decoration: none; }
  nav a, nav a:hover, nav a:visited {
    color: white; }

/* Content - Left Column */
.post-date {
  float: left;
  margin: 15px 15px 0 0;
  text-shadow: 2px 2px white;
  width: 40px; }
  .post-date ul {
    list-style-type: none;
    text-align: right;
    padding: 0;
    margin: 0; }
  .post-date .day {
    font-family: 'SourceSansProSemiBold';
    font-size: 30px;
    font-weight: normal;
    line-height: 30px; }
  .post-date .month {
    font-family: 'SourceSansProSemiBold';
    font-size: 18px;
    line-height: 18px;
    text-transform: uppercase;
    margin-top: -5px; }
  .post-date .year {
    font-family: 'SourceSansProSemiBold';
    font-size: 14px;
    line-height: 14px;
    margin-top: -2px; }

/** Posts Default
 -------------------------------------------------- */
.date-title {
  color: #999;
  font-size: 12px;
  font-weight: normal;
  margin: 0;
  padding: 10px;
  text-transform: uppercase;
  width: 50px; }

article {
  font-family: 'SourceSansProRegular';
  font-size: 15px;
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%; }
  article header a, article header a:visited {
    color: #ccc; }
  article header a:hover {
    text-decoration: underline; }
  article header a.post-link {
    display: inline-block;
    width: 100px; }
  article header a.post-close-link {
    background: transparent url("../img/close-static.png?ver=1.1") center center no-repeat;
    color: transparent;
    height: 30px;
    position: absolute;
    right: 0;
    top: 0;
    width: 30px; }
    article header a.post-close-link:hover {
      background: transparent url("../img/close-hover.png?ver=1.1") no-repeat center center; }
  article header a.post-edit-link {
    background: transparent url("../img/edit.png?ver=1.1") center center no-repeat; }
  article header a.post-stick-link {
    background: transparent url("../img/star.png?ver=1.1") center center no-repeat; }
  article header a.post-delete-link {
    background: transparent url("../img/delete.png?ver=1.1") center center no-repeat; }
  article header a.post-delete-link, article header a.post-edit-link, article header a.post-save-link, article header a.post-stick-link {
    float: right;
    height: 100%;
    margin-left: 5px;
    padding-left: 2px;
    padding-right: 2px; }
/* ... */

